--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,5 @@
         "variant": "cpp",
         "list": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled"
 }
